--- a/views/options.html
+++ b/views/options.html
@@ -1,4 +1,4 @@
-<div class="modal-header achievements-dialog-header"> <button type="button" class="close" ng-click="closeDialog()"><h2><span aria-hidden="true">&times;</span><h2><span class="sr-only">Close</span></h2></h2></button> <h2>Options</h2> </div> <div class="modal-body"> <!-- <div class="form-group">
+<div class="modal-header achievements-dialog-header"> <button type="button" class="close" ng-click="closeDialog()"><h2><span aria-hidden="true">&times;</span><h2><span class="sr-only">Close</span></h2></h2></button> <h2>Options</h2> </div> <div class="modal-body scrollable"> <!-- <div class="form-group">
     <label class="control-label">
       <span class="glyphicon glyphicon-eye-open"></span> Show advanced unit data
       <input type="checkbox" ng-init="form.showadvancedunitdata=options.showAdvancedUnitData()" ng-model="form.showadvancedunitdata" ng-change="options.showAdvancedUnitData(form.showadvancedunitdata)">
